Prevent button wrapping on `one-third` layout within button group in tab (#3431)
* fix: Prevent button wrapping on `one-third` layout within button group in tab

* chore: Ignored new markdownlint rule MD060

https://github.com/DavidAnson/markdownlint/blob/main/doc/md060.md

--- a/web/src/Web.App/AssetSrc/scss/enhancements.scss
+++ b/web/src/Web.App/AssetSrc/scss/enhancements.scss
@@ -19,6 +19,7 @@
 button.govuk-button.share-button {
   margin: 0;
   width: auto;
+  white-space: nowrap;
 }
 
 div[data-share-content-by-element-id],
